--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.58.4",
     "react-native-camera": "^1.10.2",
     "react-native-gesture-handler": "^1.0.15",
+    "react-native-linear-gradient": "^2.5.3",
     "react-navigation": "^3.2.1",
     "react-navigator": "^0.0.0-0"
   },
